plugins {
    id 'java'
    id 'maven-publish'
    id("com.gradleup.shadow") version "9.0.0-beta8"
}
apply plugin: 'java'

group = 'dev.lorenz'
version = '1.1.0-BETA-1'


def group = 'dev.lorenz.Queue'
def artifact = 'Queue-bukkit'
java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(17))
}

tasks.withType(Test).configureEach {
    jvmArgs += '--enable-preview'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--enable-preview']
    options.release = 17
}


repositories {
    mavenCentral()

    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
    maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
    maven { url 'https://repo.codemc.io/repository/maven-releases/' }
    maven { url 'https://repo.codemc.io/repository/maven-snapshots/' }
    maven { url 'https://repo.extendedclip.com/releases/' }
    maven { url "https://repo.codemc.io/repository/nms/" }

}
dependencies {
    compileOnly 'org.spigotmc:spigot:1.8.8-R0.1-SNAPSHOT'
    compileOnly 'org.projectlombok:lombok:1.18.36'
    annotationProcessor 'org.projectlombok:lombok:1.18.36'
    implementation "dev.dejvokep:boosted-yaml:1.3.6"
    implementation 'org.xerial.snappy:snappy-java:1.1.10.7'
    compileOnly fileTree(dir: 'MTR-CommandAPI', include: ['*'])


}

tasks {
    compileJava {
        dependsOn clean
        options.encoding = 'UTF-8'
    }

    build {
        dependsOn shadowJar
        dependsOn publish
    }
}

tasks.named('shadowJar') {
    archiveClassifier.set('')
}

tasks.build {
    dependsOn tasks.shadowJar
}



publishing {
    publications {
        maven(MavenPublication) {
            groupId = group
            artifactId = artifact

            from components.java
        }
    }
}